--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,8 @@
     <textarea name="message" rows="5" cols="50"></textarea><br><br>
     <label>Upload WAV File:</label>
     <input type="file" name="audio" accept=".wav"><br><br>
+    <label>Output Filename (without .wav):</label><br>
+    <input type="text" name="output_name" placeholder="e.g. my_secret_audio"><br><br>
     <button type="submit">Encode</button>
 </form>
 
